[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"]}
thiserror = "1.0.64"

[lib]
name = "cryptopals"
path = "src/lib.rs"

[[bin]]
name = "s1c1"
path = "src/bin/set1/challenge1.rs"

[[bin]]
name = "s1c2"
path = "src/bin/set1/challenge2.rs"

[[bin]]
name = "s1c3"
path = "src/bin/set1/challenge3.rs"

[[bin]]
name = "s1c4"
path = "src/bin/set1/challenge4.rs"

[[bin]]
name = "s1c5"
path = "src/bin/set1/challenge5.rs"

[[bin]]
name = "s1c6"
path = "src/bin/set1/challenge6.rs"
